Fix sample document src

--- a/my-thesis-setup.tex
+++ b/my-thesis-setup.tex
@@ -61,8 +61,8 @@
     bibfile=bib-refs,%
     bibstyle=alphabetic,%
     bibsorting=nty,%
-}{cleanthesis}
-\usepackage{cleanthesis}
+}{cleanthesisfork}
+\usepackage{cleanthesisfork}
 
 \hypersetup{% setup the hyperref-package options
     pdftitle={\thesisTitle},    %   - title (PDF meta)
