--- a/my-thesis-setup.tex
+++ b/my-thesis-setup.tex
@@ -57,7 +57,7 @@
     colorize=full,%
     colortheme=bluemagenta,%
     configurebiblatex=true,%
-    bibsys=biber,%
+%    bibsys=biber,%
     bibfile=bib-refs,%
     bibstyle=alphabetic,%
     bibsorting=nty,%
